--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/native_trigger" />
 
+    <Button
+        android:id="@+id/app_inbox"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="App Inbox" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
